# ScribbleKit

./: .gitignore  CMakeLists.txt  GraphicsApiInterface.h  GraphicsApiInterface.ixx  PlatformIncludes.h  main.cpp  main.cppm
DX12/: InterfaceDX12.cpp  InterfaceDX12.h  InterfaceDX12.ixx
app/: App.ixx
graphics/: types.ixx
source/: PlatformIncludes.h  main.cpp
source/DX12/: InterfaceDX12.ixx
source/app/: scribble_app.ixx
source/graph/: graph.ixx  node.ixx
source/graphics/: interface.ixx  types.ixx
source/space/: space.ixx
source/space/graph/: graph.ixx  node.ixx
source/utils/: utils.ixx
utils/: utils-result.ixx  utils.ixx
